:zap: Add (Layout Responsive): Add a responsive layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 
 <body>
+    <div class="main-container">
+        <nav>
+            Nav
+        </nav>
+        <section class="search-section">Search</section>
+        <main class="content">Content</main>
+        <footer>Footer</footer>
+    </div>
 
 </body>
 
