:zap: Add(Content grid): Add content grid for products at the main content container

--- a/index.html
+++ b/index.html
@@ -16,11 +16,183 @@
 <body>
     <div class="main-container">
         <nav>
-            Nav
+            <h1>KbCars</h1>
         </nav>
-        <section class="search-section">Search</section>
-        <main class="content">Content</main>
-        <footer>Footer</footer>
+        <section class="search-section">
+            <input type="text" placeholder="Look for some cars">
+        </section>
+        <main class="content">
+            <section class="car-grid">
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Renault Logan Mecánico</h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1731968757.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2020</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Mazda 2 Automatico
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667064907.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2020</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">New Mazda 3 Automatico | Hibrido
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1730930545.png"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">New Suzuki XL7 2023
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667065048.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Mercedes Benz Clase E Cabrio
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667065074.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">New Mazda 3 Automatico | Hibrido
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1730930545.png"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">New Suzuki XL7 2023
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667065048.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Mercedes Benz Clase E Cabrio
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667065074.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2024</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Renault Logan Mecánico</h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1731968757.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2020</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+
+                <!--Car-->
+                <article class="card">
+                    <h3 class="product-title">Mazda 2 Automatico
+                    </h3>
+                    <img class="product-image" src="https://rentacarmedellin.co/src/img/cars/1667064907.jpg"
+                        alt="Car-image">
+                    <div class="product-price-flexbox">
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Year:</span>
+                            2020</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color:#64748b ;">Kms:</span>
+                            50.000</p>
+                        <p class="product-price"><span class="monserrat-bold" style="color: #64748b;">Price:</span>
+                            $99,900</p>
+                    </div>
+                    <button class="btn-buy">Buy now</button>
+                </article>
+            </section>
+        </main>
+        <footer>Proyecto desarrollado por Alejongo | 2024</footer>
     </div>
 
 </body>
