:zap: Change (Header text)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main-container">
         <nav>
-            <h1>KbCars</h1>
+            <h1>KbCars.com</h1>
         </nav>
         <section class="search-section">
             <input type="text" placeholder="Look for some cars">
