:lipstick: Styled (New style): New content art sidebar and selector for type of car

--- a/index.html
+++ b/index.html
@@ -17,9 +17,25 @@
     <div class="main-container">
         <nav>
             <h1>KbCars.com</h1>
+
+            <section class="category-list">
+                <ul>
+                    <li class="category-item"><a href="#">Sedan</a></li>
+                    <li class="category-item"><a href="#">Hatchback</a></li>
+                    <li class="category-item"><a href="#">Sport cars</a> </li>
+                    <li class="category-item"><a href="#">Vans</a></li>
+                </ul>
+            </section>
         </nav>
         <section class="search-section">
             <input type="text" placeholder="Look for some cars">
+            <select name="" id="">
+                <option value="sedan">Sedan</option>
+                <option value="Sedan">Hatchback</option>
+                <option value="Sedan">Sport cars</option>
+                <option value="Sedan">Vans</option>
+            </select>
+
         </section>
         <main class="content">
             <section class="car-grid">
