--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/320e9aad38.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="main-container">
         <nav>
             <h1>KbCars.com</h1>
+
+            <article class="menu-icon">
+                <i class="fa-solid fa-bars fa-xl"></i>
+            </article>
 
             <section class="category-list">
                 <ul>
@@ -206,6 +211,17 @@
                     </div>
                     <button class="btn-buy">Buy now</button>
                 </article>
+            </section>
+            <section class="paginator">
+                <ul>
+                    <li class="change-page"><i class="fa-solid fa-angle-left"></i></li>
+                    <li class="active-page">1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li class="change-page"><i class="fa-solid fa-angle-right"></i></li>
+                </ul>
+
             </section>
         </main>
         <footer>Proyecto desarrollado por Alejongo | 2024</footer>
